Select all on page no longer gets barely visible items.

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -5,7 +5,7 @@ html.fullscreen ps-header {
 
 html.scrolled {
   body {
-    padding-top: 50px;
+    padding-top: 72px;
   }
   ps-header {
     position: fixed;
